tests/snapshots/tests__run@log.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/log.hvm
---
#2
RWTS   :               7
- ANNI :               2
- COMM :               0
- ERAS :               0
- DREF :               5
- OPER :               0
