tests/snapshots/tests__run@log.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/log.hvmc
---
#2
RWTS   :               8
- ANNI :               2
- COMM :               0
- ERAS :               1
- DREF :               5
- OPER :               0
