tests/snapshots/tests__run@neg_fusion.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/neg_fusion.hvmc
---
(a (* a))
RWTS   :             151
- ANNI :              85
- COMM :              36
- ERAS :               0
- DREF :              30
- OPER :               0
