tests/snapshots/tests__run@nums.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/nums.hvmc
---
[#12345 [#0 [#0 [#-12345 [#2748 [#-2748 [#10 [#-10 [#1.0 [#0.1 [#0.001 [#-123.123 [#-1204.5 [#NaN [#NaN [#inf [#-inf *]]]]]]]]]]]]]]]]]
RWTS   :              36
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              36
- OPER :               0
