tests/snapshots/tests__run@queue.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/queue.hvm
---
(((* (a a)) (((((b c) (b c)) (((({3 (d e) (f d)} (f e)) ((* (g g)) h)) (* h)) i)) (* i)) j)) (* j))
RWTS   :             102
- ANNI :              39
- COMM :               1
- ERAS :               4
- DREF :              58
- OPER :               0
