tests/snapshots/tests__run@queue.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/queue.hvmc
---
(((* (a a)) (((((b c) (b c)) (((({3 (d e) (f d)} (f e)) ((* (g g)) h)) (* h)) i)) (* i)) j)) (* j))
RWTS   :              59
- ANNI :              39
- COMM :               1
- ERAS :               4
- DREF :              15
- OPER :               0
